--- a/jobs/templates/macros.html
+++ b/jobs/templates/macros.html
@@ -8,21 +8,19 @@
   </header>
   <div class="card-content">
     <div class="content">
-      <p>
-        <a href="">{{ job['employer_name'] }}</a><br>
+      <a>{{ job['employer_name'] }}</a><br>
         ${{ job['salary'] }}<br>
         {{ job['description'] }}
-      </p>
     </div>
   </div>
 </div>
-
 {% endmacro %}
-
 {% macro show_jobs(jobs) %}
-<div class = "columns is-multiline">
+<div class="columns is-multiline">
   {% for job in jobs %}
     <div class="column is-half">
       {{ show_job(job) }}
     </div>
   {% endfor %}
+</div>
+{% endmacro %}
