--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -8,7 +8,8 @@
   </header>
   <div class="card-content">
     <div class="content">
-      <a>{{ job['employer_name'] }}</a><br>
+      <p>
+        <a href="{{ url_for('employer', employer_id=job['employer_id'])}}">{{ job['employer_name'] }}</a><br>
         ${{ job['salary'] }}<br>
         {{ job['description'] }}
     </div>
